--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,7 @@
 {
   "name": "autheticationapp",
-  "app_id": "",
-  "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  },
+  "type": "ionic-angular"
 }
